feat: fix auth middleware and create history transaction.go and update swagger
